--- a/climate_control.yml
+++ b/climate_control.yml
@@ -1,7 +1,8 @@
 blueprint:
-  name: Climate Control - Multi-Zone Auto Heat/Cool
+  name: Climate Control - Multi-Zone Auto Heat/Cool (LED-Safe)
   description: >
     Automatically controls multiple climate devices by switching to 'cool' or 'heat' mode based on the current temperature.
+    Avoids resending commands unnecessarily to prevent Midea AC LED from turning on.
   domain: automation
   input:
     climate_entities:
@@ -19,7 +20,6 @@ blueprint:
           device_class: temperature
     min_temperature:
       name: Minimum Temperature
-      description: If current temperature is below this, switch to 'heat'.
       default: 20
       selector:
         number:
@@ -28,7 +28,6 @@ blueprint:
           unit_of_measurement: °C
     max_temperature:
       name: Maximum Temperature
-      description: If current temperature is above this, switch to 'cool'.
       default: 25
       selector:
         number:
@@ -37,7 +36,6 @@ blueprint:
           unit_of_measurement: °C
     target_temperature:
       name: Target Temperature
-      description: Setpoint to use when setting the climate device.
       default: 22
       selector:
         number:
@@ -55,38 +53,62 @@ condition: []
 
 action:
   - variables:
-      temperature_sensor_entity: !input temperature_sensor
-      current_temp: "{{ states(temperature_sensor_entity) | float(0) }}"
+      sensor_entity: !input temperature_sensor
+      current_temp: "{{ states(sensor_entity) | float(0) }}"
       min_temp: !input min_temperature
       max_temp: !input max_temperature
       target_temp: !input target_temperature
+      climate_ids: "{{ expand(!input climate_entities) | map(attribute='entity_id') | list }}"
 
-  - choose:
-      - conditions: "{{ current_temp < min_temp }}"
-        sequence:
-          - service: climate.set_hvac_mode
-            target: !input climate_entities
-            data:
-              hvac_mode: heat
-          - service: climate.set_temperature
-            target: !input climate_entities
-            data:
-              temperature: "{{ target_temp }}"
+  - repeat:
+      for_each: "{{ climate_ids }}"
+      sequence:
+        - variables:
+            entity: "{{ repeat.item }}"
+            current_mode: "{{ state_attr(entity, 'hvac_mode') }}"
+            current_fan: "{{ state_attr(entity, 'fan_mode') }}"
+            current_setpoint: "{{ state_attr(entity, 'temperature') | float(0) }}"
 
-      - conditions: "{{ current_temp > max_temp }}"
-        sequence:
-          - service: climate.set_hvac_mode
-            target: !input climate_entities
-            data:
-              hvac_mode: cool
-          - service: climate.set_temperature
-            target: !input climate_entities
-            data:
-              temperature: "{{ target_temp }}"
+        - choose:
+            - conditions: "{{ current_temp < min_temp and current_mode != 'heat' }}"
+              sequence:
+                - service: climate.set_hvac_mode
+                  data:
+                    hvac_mode: heat
+                  target:
+                    entity_id: "{{ entity }}"
+            - conditions: "{{ current_temp > max_temp and current_mode != 'cool' }}"
+              sequence:
+                - service: climate.set_hvac_mode
+                  data:
+                    hvac_mode: cool
+                  target:
+                    entity_id: "{{ entity }}"
+            - conditions: "{{ current_temp >= min_temp and current_temp <= max_temp and current_mode != 'off' }}"
+              sequence:
+                - service: climate.turn_off
+                  target:
+                    entity_id: "{{ entity }}"
 
-      - conditions: "{{ current_temp >= min_temp and current_temp <= max_temp }}"
-        sequence:
-          - service: climate.turn_off
-            target: !input climate_entities
+        - choose:
+            - conditions: "{{ current_temp < min_temp or current_temp > max_temp }}"
+              sequence:
+                - choose:
+                    - conditions: "{{ current_setpoint != target_temp }}"
+                      sequence:
+                        - service: climate.set_temperature
+                          data:
+                            temperature: "{{ target_temp }}"
+                          target:
+                            entity_id: "{{ entity }}"
+
+                - choose:
+                    - conditions: "{{ current_fan != 'low' }}"
+                      sequence:
+                        - service: climate.set_fan_mode
+                          data:
+                            fan_mode: "low"
+                          target:
+                            entity_id: "{{ entity }}"
 
 mode: single
